# Glyph

./: .env.example  .gitignore  .gitpod.yml  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
src/: db.py
src/bot/: __init__.py
src/cogs/: ai.py  config.py  error.py  events.py  fun.py  levels.py  moderation.py  tickets.py  utils.py
src/views/: __init__.py
