[project]
name = "purpbot"
version = "3.1.0"
description = "Add your description here"
authors = [
    { name = "te", email = "thrzl@icloud.com" },
    { name = "SaiCodez", email = "79881161+SaiCodez@users.noreply.github.com" }
]
dependencies = [
    "py-cord>=2.5.0",
    "asyncpg>=0.29.0",
    "cachetools>=5.3.3",
    "python-dotenv>=1.0.1",
    "jishaku>=2.5.2",
    "aiofiles>=23.2.1",
    "fasttext-wheel>=0.9.2",
    "msgpack>=1.0.8",
    "humanize>=4.9.0",
    "coloredlogs>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-aiofiles>=23.2.0.20240403",
    "types-cachetools>=5.3.0.7",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/purpbot"]
